Added release toolchain

--- a/beaker-cluster/src/main/scala/BUILD
+++ b/beaker-cluster/src/main/scala/BUILD
@@ -8,4 +8,12 @@ scala_library(
         '3rdparty/jvm:slf4j-simple',
         '3rdparty/jvm:thrift',
     ],
+    provides=artifact(
+        org='com.madavan',
+        name='beaker-cluster_2.12',
+        repo=public,
+        publication_metadata=describe,
+    ),
 )
+
+
