--- a/pants.ini
+++ b/pants.ini
@@ -62,8 +62,8 @@ restrict_push_branches: [
     'master',
   ]
 restrict_push_urls: [
-    'git@github.com:ashwin153/caustic.git',
-    'https://github.com/ashwin153/caustic.git'
+    'git@github.com:ashwin153/beaker.git',
+    'https://github.com/ashwin153/beaker.git'
   ]
 
 [repl.scala]
