Fixed Protobuf Compilation

--- a/pants.ini
+++ b/pants.ini
@@ -29,6 +29,9 @@ args: [
 # Enables javadoc generation for generated sources.
 include_codegen: True
 
+[gen.protoc]
+version: 3.1.0
+
 [ivy]
 # Fetches PGP signing libraries for Maven artifacts.
 ivy_profile: %(pants_supportdir)s/ivy/pgp.ivysettings.xml
