--- a/3rdparty/BUILD
+++ b/3rdparty/BUILD
@@ -1,5 +1,7 @@
 ####################################################################################################
-#                                           Protobuf                                               #
-#                         https://developers.google.com/protocol-buffers/                          #
+#                                            ScalaPB                                               #
+#                               https://github.com/scalapb/ScalaPB                                 #
 ####################################################################################################
-target(name='protobuf-java', dependencies = ['3rdparty/jvm:protobuf'])
+target(name='protobuf-java', dependencies=['3rdparty/jvm:protobuf'])
+target(name='scalapb-runtime', dependencies=['3rdparty/jvm:scalapb-runtime'])
+target(name='scalapb-runtime-grpc', dependencies=['3rdparty/jvm:scalapb-runtime-grpc'])
