--- a/beaker-cluster/src/main/scala/BUILD
+++ b/beaker-cluster/src/main/scala/BUILD
@@ -2,11 +2,11 @@ scala_library(
     name='scala',
     sources=rglobs('*.scala'),
     dependencies=[
-        'beaker-core/src/main/thrift',
+        'beaker-core/src/main/protobuf',
         '3rdparty/jvm:curator',
         '3rdparty/jvm:pureconfig',
         '3rdparty/jvm:slf4j-simple',
-        '3rdparty/jvm:thrift',
+        '3rdparty/jvm:grpc-netty',
     ],
     provides=artifact(
         org='com.madavan',
