--- a/pants.ini
+++ b/pants.ini
@@ -5,9 +5,13 @@ pythonpath: [
   ]
 backend_packages: +[
     'publish',
+    'trueaccord.pants.scalapb',
   ]
 pants_ignore: +[
     '/build-support/*.venv/',
+  ]
+plugins: [
+    'scalapb.pants'
   ]
 
 [binaries]
@@ -28,9 +32,6 @@ args: [
 [doc.javadoc]
 # Enables javadoc generation for generated sources.
 include_codegen: True
-
-[gen.protoc]
-version: 3.1.0
 
 [ivy]
 # Fetches PGP signing libraries for Maven artifacts.
@@ -75,6 +76,3 @@ main: ammonite.Main
 [scala-platform]
 version: custom
 suffix_version: 2.12
-
-[thrift-binary]
-version: 0.10.0
