--- a/3rdparty/jvm/BUILD
+++ b/3rdparty/jvm/BUILD
@@ -32,6 +32,8 @@ jar_library(name='curator-test', jars=[
 # gRPC Netty
 jar_library(name='grpc-netty', jars=[
     jar(org='io.grpc', name='grpc-netty', rev='1.10.0'),
+    jar(org='io.netty', name='netty-tcnative-boringssl-static', rev='2.0.7.Final'),
+    jar(org='io.netty', name='netty-handler', rev='4.1.17.Final'),
 ])
 
 # Jedis
