--- a/beaker-server/src/main/scala/BUILD
+++ b/beaker-server/src/main/scala/BUILD
@@ -11,7 +11,7 @@ scala_library(
         '3rdparty/jvm:grpc-netty',
         '3rdparty/jvm:jedis',
         scoped('3rdparty/jvm:mysql', scope='runtime'),
-        scoped('3rdparty/jvm:postgres', scope='runtime'),
+        scoped('3rdparty/jvm:postgresql', scope='runtime'),
         '3rdparty/jvm:pureconfig',
         '3rdparty/jvm:slf4j-simple',
     ],
