--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -8,7 +8,7 @@ beaker {
   cache = []
 
   # A database implementation.
-  # Databases are the underlying source of consistency and durability. ("local", "sql")
+  # Databases are the underlying source of durability. ("local", "sql")
   database = "local"
 
   caches {
