Scaladoc for generated sources

--- a/pants.ini
+++ b/pants.ini
@@ -32,6 +32,9 @@ args: [
 [doc.javadoc]
 include_codegen: True
 
+[doc.scaladoc]
+include_codegen: True
+
 [ivy]
 ivy_profile: %(pants_supportdir)s/ivy/pgp.ivysettings.xml
 
