--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -1,14 +1,21 @@
 beaker {
 
-  # A port number.
+  # Server port number.
   port = 9090
 
-  # A hierarchy of caches.
-  # Caches are accessed in the order that they appear in this list. ("local", "redis")
+  # Seed address.
+  seed = ""
+
+  # Consensus backoff duration.
+  backoff = 1 second
+
+  # Cache hierarchy.
+  # Caches are accessed in the order that they appear.
+  # "local", "redis"
   cache = []
 
-  # A database implementation.
-  # Databases are the underlying source of durability. ("local", "sql")
+  # Database implementation. ("local", "sql")
+  # Databases are the underlying source of durability.
   database = "local"
 
   caches {
