--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -46,9 +46,11 @@ beaker {
     redis {
 
       # Hostname.
+      # The hostname of the Redis server. Defaults to localhost.
       host = "localhost"
 
       # Port number. [0, 65535]
+      # The TCP/IP port number of the Redis server. Defaults to the standard Redis port.
       port = 6379
 
     }
@@ -66,11 +68,14 @@ beaker {
     sql {
 
       # Username.
-      #
+      # The username of the SQL database. User must have CREATE, SELECT, INSERT, and UPDATE
+      # privileges. Defaults to the root user.
       username = "root"
 
       # Password.
-      #
+      # The password for the user of the SQL database. Passwords should never be stored in plaintext
+      # in any configuration file; instead, set the password using a command line argument in the
+      # following manner -Dbeaker.databases.sql.password=${password}.
       password = ""
 
       # SQL dialect. "mysql", "postgresql"
@@ -78,7 +83,7 @@ beaker {
       dialect = "mysql"
 
       # JDBC connection url. jdbc:${driver}://${host}:${port}/${database}?${options}
-      #
+      # The JDBC connection string.
       url = "jdbc:mysql://localhost:3306/test?serverTimezone=UTC"
 
     }
