Fixed instance configuration

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -1,27 +1,31 @@
 beaker {
 
-  # Port number. [0, 65535]
-  # The TCP/IP port over which the instance is served.
-  port = 9090
+  server {
 
-  # Seed address. ${host}:${port}
-  # Optional network location of a "seed" beaker from which the instance is bootstrapped. All
-  # members of the cluster except the initial member should be bootstrapped in this manner.
-  seed = ""
+    # Port number. [0, 65535]
+    # The TCP/IP port over which the instance is served.
+    port = 9090
 
-  # Consensus backoff duration.
-  # The amount of time to wait between retries. Larger backoff durations will perform better on
-  # workloads in which concurrent operations conflict with greater frequency.
-  backoff = 1 second
+    # Seed address. ${host}:${port}
+    # Optional network location of a "seed" beaker from which the instance is bootstrapped. All
+    # members of the cluster except the initial member should be bootstrapped in this manner.
+    seed = null
 
-  # Cache hierarchy. "local", "redis"
-  # The sequence of cache implementations in descending order of priority. An implementation may
-  # appear at most once; for example, there cannot be two local caches.
-  cache = []
+    # Consensus backoff duration.
+    # The amount of time to wait between retries. Larger backoff durations will perform better on
+    # workloads in which concurrent operations conflict with greater frequency.
+    backoff = 1 second
 
-  # Database implementation. "local", "sql"
-  # The underlying database implementation.
-  database = "local"
+    # Cache hierarchy. "local", "redis"
+    # The sequence of cache implementations in descending order of priority. An implementation may
+    # appear at most once; for example, there cannot be two local caches.
+    cache = []
+
+    # Database implementation. "local", "sql"
+    # The underlying database implementation.
+    database = "local"
+
+  }
 
   caches {
 
