Updated Server configuration

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -2,9 +2,9 @@ beaker {
 
   server {
 
-    # Port number. [0, 65535]
-    # The TCP/IP port over which the instance is served.
-    port = 9090
+    # Server address. ${host}:${port}
+    # Network location over which the beaker is accessible.
+    address = "localhost:9090"
 
     # Seed address. ${host}:${port}
     # Optional network location of a "seed" beaker from which the instance is bootstrapped. All
