Added runner class

--- a/beaker-client/src/main/scala/BUILD
+++ b/beaker-client/src/main/scala/BUILD
@@ -14,4 +14,12 @@ scala_library(
     ),
 )
 
-
+jvm_binary(
+    name='bin',
+    basename='beaker-client',
+    source='beaker/client/Main.scala',
+    main='beaker.client.Main',
+    dependencies=[
+        'beaker-client/src/main/scala',
+    ],
+)
