Updated pants version

--- a/build-support/travis/pants.ini
+++ b/build-support/travis/pants.ini
@@ -1,17 +1,15 @@
 [DEFAULT]
-# Turn off all nailgun use.
+# Turn off nailgun.
 use_nailgun: False
 
 [compile.zinc]
-# The Travis free tier OOMs with more than one worker.
+# Travis free tier OOMs with more than one worker.
 worker_count: 1
 
 [jvm-distributions]
-# The JDK install is managed within the .travis.yml.
+# JDK install is managed within .travis.yml.
 paths: {
-    'linux': [
-      '%(homedir)s/opt/jdk1.8.0_40',
-    ],
+    'linux': ['%(homedir)s/opt/jdk1.8.0_40'],
   }
   
 [test.junit]
