Switched to Log4J

--- a/3rdparty/jvm/BUILD
+++ b/3rdparty/jvm/BUILD
@@ -55,8 +55,8 @@ jar_library(name='scalapb-runtime', jars = [
 ])
 
 # SLF4J
-jar_library(name='slf4j-simple', jars=[
-    jar(org='org.slf4j', name='slf4j-simple', rev='1.7.25'),
+jar_library(name='slf4j', jars=[
+    jar(org='org.slf4j', name='slf4j-log4j12', rev='1.7.25'),
 ])
 
 ####################################################################################################
