--- a/beaker-server/src/main/scala/BUILD
+++ b/beaker-server/src/main/scala/BUILD
@@ -14,7 +14,7 @@ scala_library(
         scoped('3rdparty/jvm:postgresql', scope='runtime'),
         '3rdparty/jvm:pureconfig',
         '3rdparty/jvm:scala-logging',
-        '3rdparty/jvm:slf4j-simple',
+        '3rdparty/jvm:slf4j',
     ],
     provides=artifact(
         org='com.madavan',
