--- a/debug.properties
+++ b/debug.properties
@@ -1,4 +1,14 @@
 ####################################################################################################
+#                                          Default Logging                                         #
+#                                                2>&1                                              #
+####################################################################################################
+log4j.rootLogger=INFO, stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{MM/dd/yyyy HH:mm:ss.SSS} %-5p %m%n
+
+####################################################################################################
 #                                            Debug Logging                                         #
 #                                    /home/ubuntu/logs/beaker.log                                  #
 ####################################################################################################
