Switch Local.Database from SortedMap to ConcurrentSkipListMap

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -63,7 +63,7 @@ beaker {
 
   databases {
 
-    # SortedMap. http://www.scala-lang.org/api/2.12.1/scala/collection/mutable/SortedMap.html
+    # ConcurrentSkipListMap.
     local {
 
     }
