Lowered gRPC timeout

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -63,7 +63,7 @@ beaker {
 
   databases {
 
-    # ConcurrentSkipListMap.
+    # ConcurrentSkipListMap. https://goo.gl/cvWdGD
     local {
 
     }
