--- a/pants.ini
+++ b/pants.ini
@@ -5,13 +5,10 @@ pythonpath: [
   ]
 backend_packages: +[
     'publish',
-    'trueaccord.pants.scalapb',
+    'scalapb',
   ]
 pants_ignore: +[
     '/build-support/*.venv/',
-  ]
-plugins: [
-    'scalapb.pants'
   ]
 
 [binaries]
