--- a/pants.ini
+++ b/pants.ini
@@ -5,10 +5,13 @@ pythonpath: [
   ]
 backend_packages: +[
     'publish',
-    'scalapb',
+    'trueaccord.pants.scalapb',
   ]
 pants_ignore: +[
     '/build-support/*.venv/',
+  ]
+plugins: +[
+    'scalapb.pants',
   ]
 
 [binaries]
