--- a/beaker-server/src/main/resources/log4j.properties
+++ b/beaker-server/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 #                                          Default Logging                                         #
 #                                                2>&1                                              #
 ####################################################################################################
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=OFF
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -12,7 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM/dd/yyyy HH:mm:ss.SSS} %-5p 
 #                                            Debug Logging                                         #
 #                                    /home/ubuntu/logs/beaker.log                                  #
 ####################################################################################################
-log4j.logger.beaker.server=OFF, file
+log4j.logger.beaker.server=OFF
 log4j.additivity.beaker.server=false
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=/home/ubuntu/logs/beaker.log
