--- a/beaker-server/src/main/resources/log4j.properties
+++ b/beaker-server/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 #                                          Default Logging                                         #
 #                                                2>&1                                              #
 ####################################################################################################
-log4j.rootLogger=OFF
+log4j.rootLogger=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
