Default Local.Cache
Added a local cache by default to improve performance.
ConcurrentSkipListMap has O(log n) lookups while ConcurrentHashMap has
O(1). Because we now perform transactions after we complete consensus,
the additional write overhead of writing to both maps will not be
visible to clients. This should have significant performance
implications for read-dominant workloads. Related to #16.

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ beaker {
     # Cache hierarchy. "local", "redis"
     # The sequence of cache implementations in descending order of priority. An implementation may
     # appear at most once; for example, there cannot be two local caches.
-    cache = []
+    cache = ["local"]
 
     # Database implementation. "local", "sql"
     # The underlying database implementation.
