Changed M to MB

--- a/beaker-server/src/main/resources/reference.conf
+++ b/beaker-server/src/main/resources/reference.conf
@@ -36,7 +36,7 @@ beaker {
       # An upper bound on the size of the cache in bytes. Because the size of each cache entry is
       # approximate, it is possible for the actual memory utilization of a maximum capacity cache to
       # differ slightly from this threshold depending on the underlying JVM.
-      capacity = 20 M
+      capacity = 20 MB
 
       # Eviction duration.
       # The duration after which an unused cache entry is automatically evicted. Cache entries are
